# iter

./: .gitignore  .sloc-guard.toml  AGENTS.md  Cargo.toml  clippy.toml  deny.toml  rust-toolchain.toml
iter_cli/: Cargo.toml  README.md
iter_cli/src/: agent.rs  arg.rs  assembly.rs  cli.rs  config.rs  discovery.rs  events.rs  iterfile.rs  main.rs  naming.rs  process_lifecycle.rs  project.rs  project_lock.rs  prompt.rs  runner_policy.rs  secrets.rs  shell_action.rs  source.rs  telemetry.rs  tracing_preferences.rs  workspace.rs
iter_cli/src/compose/: error.rs  flatten.rs  mod.rs  plan.rs  run.rs  service.rs  service_build.rs  supervisor.rs  trigger.rs
iter_cli/src/dispatch/: attach.rs  compose.rs  enqueue.rs  load.rs  mod.rs  proc.rs  run.rs  validate.rs
iter_cli/src/output/: error.rs  format.rs  id.rs  listing.rs  mod.rs  stream.rs  table.rs  time.rs
iter_cli/src/process/: adoption.rs  adoption_token.rs  handle.rs  id.rs  interrupt.rs  lifetime_lock.rs  metadata.rs  mod.rs  observer.rs  paths.rs  posix_signal.rs  proc_info.rs  record.rs  registry.rs  runtime.rs  session.rs  spawner.rs  status.rs
iter_cli/src/queue/: mod.rs
iter_cli/src/start/: mod.rs
iter_cli/tests/: contract.rs  enqueue_cli.rs
iter_command_cli/: Cargo.toml  README.md
iter_command_cli/src/: lib.rs  logging.rs  main.rs  stream.rs
iter_command_cli/src/command/: dedupe.rs  error.rs  extract.rs  mod.rs
iter_command_cli/tests/: cli_smoke.rs
iter_compose/: Cargo.toml  README.md
iter_compose/src/: agent.rs  agent_router.rs  arg.rs  assembly.rs  config.rs  events.rs  iterfile.rs  lib.rs  process_lifecycle.rs  project.rs  prompt.rs  secrets.rs  signals.rs  telemetry.rs  trigger_argv.rs  workspace.rs
iter_compose/src/compose/: error.rs  flatten.rs  mod.rs  plan.rs  run.rs  service.rs  service_build.rs  supervisor.rs  trigger.rs
iter_compose/src/queue/: kafka.rs  kinesis.rs  mod.rs  pubsub.rs  servicebus.rs  sqs.rs
iter_compose/tests/: iteration_modulo.rs
iter_core/: Cargo.toml  README.md
iter_core/src/: config.rs  error.rs  home.rs  lib.rs  os_signal.rs  process_group.rs  telemetry.rs  time.rs
iter_core/src/agent/: agent.rs  cli_json.rs  command_path.rs  error.rs  hook_install.rs  hook_lifecycle.rs  inner.rs  kind.rs  mod.rs  mode.rs  outcome.rs  process.rs  report.rs  result_kind.rs  router.rs  run.rs  session.rs  testutil.rs  transcript.rs
iter_core/src/log/: mod.rs  reader.rs  sink.rs  stream.rs  writer.rs
iter_core/src/process/: adoption.rs  bootstrap_token.rs  handle.rs  id.rs  interrupt.rs  lifecycle.rs  metadata.rs  mod.rs  observer.rs  paths.rs  posix_signal.rs  proc_info.rs  process_group.rs  record.rs  registry.rs  runtime.rs  session.rs  shutdown.rs  signal.rs  spawner.rs  status.rs  stdio.rs
iter_core/src/prompt/: error.rs  guard.rs  mod.rs  prompt.rs  selector.rs  template.rs  test_helpers.rs
iter_core/src/queue/: address.rs  budgeted.rs  connect.rs  descriptor.rs  dlq.rs  envelope.rs  error.rs  inner.rs  metadata_source.rs  mod.rs  priority.rs  queue.rs  retry.rs
iter_core/src/runner/: builder.rs  config.rs  error.rs  event.rs  event_emitter.rs  event_handler.rs  events.rs  iteration.rs  lifecycle.rs  lifecycle_tests.rs  mod.rs  observer.rs  policy.rs  shell_event_handler.rs
iter_core/src/signal/: defaults.rs  id.rs  inner.rs  kind.rs  mod.rs  signal.rs
iter_core/src/source/: mod.rs
iter_core/src/template/: context.rs  error.rs  mod.rs
iter_core/src/workspace/: apply_back.rs  error.rs  inner.rs  mod.rs  workspace.rs
iter_cron_cli/: Cargo.toml  README.md
iter_cron_cli/src/: cron_trigger.rs  lib.rs  main.rs  signal_defaults.rs  signal_shape.rs
iter_cron_cli/tests/: cli_smoke.rs
iter_files_cli/: Cargo.toml  README.md
iter_files_cli/src/: files_trigger.rs  lib.rs  main.rs  queue_source.rs  signal_defaults.rs  termination.rs
iter_files_cli/tests/: cli_smoke.rs
iter_language/: Cargo.toml  README.md
iter_language/fuzz/: .gitignore  Cargo.toml
iter_language/fuzz/fuzz_targets/: fuzz_diff.rs  fuzz_lex_only.rs  fuzz_parse.rs
iter_language/grammar/: iter.pest
iter_language/src/: diagnostic.rs  lib.rs
iter_language/src/ast/: agent.rs  arg.rs  compose.rs  event.rs  mod.rs  prompt.rs  runner.rs  source.rs  telemetry.rs  trigger.rs  value.rs  workspace.rs
iter_language/src/lexer/: mod.rs  scanner.rs  token.rs
iter_language/src/parser/: cst.rs  cursor.rs  guard.rs  mod.rs  prompt.rs  section.rs  value.rs
iter_language/src/semantic/: agent.rs  compose.rs  compose_import.rs  compose_resolve.rs  compose_service.rs  compose_trigger.rs  event.rs  field_helpers.rs  field_schema.rs  guard.rs  mod.rs  prompt.rs  runner.rs  source.rs  suggest.rs  template.rs  trigger.rs  value.rs  webhook.rs  workspace.rs
iter_language/tests/: compose_parse.rs  conformance.rs  deprecation.rs  flat_syntax_removed.rs  source_parse.rs  template_positions.rs
iter_language/tests/differential/: corpus.rs  generated.rs  main.rs  mutation.rs
iter_language/tests/oracle/: canonicalize.rs  lowering.rs  mod.rs  parser.rs  pretty.rs  strategy.rs
iter_language/tests/properties/: comment_transparency.rs  duration_normalization.rs  idempotence.rs  keyword_ident.rs  longest_match.rs  main.rs  whitespace_transparency.rs
iter_language/tests/proptest-regressions/: generated.txt  mutation.txt
iter_tracing/: Cargo.toml
iter_tracing/src/: lib.rs
iter_trigger/: Cargo.toml  README.md
iter_trigger/src/: counting_queue.rs  lib.rs  queue_loader.rs  shutdown.rs  trigger.rs
iter_watch_cli/: Cargo.toml  README.md
iter_watch_cli/src/: banner.rs  error.rs  lib.rs  main.rs  stream.rs
iter_watch_cli/tests/: cli_smoke.rs
iter_webhook_cli/: Cargo.toml  README.md
iter_webhook_cli/src/: error.rs  lib.rs  main.rs  queue_source.rs  termination.rs
iter_webhook_cli/tests/: cli_smoke.rs
lints/: .gitignore  Cargo.toml  rust-toolchain.toml
lints/.cargo/: config.toml
lints/iter_lint_meaningful_type_names/: Cargo.toml
lints/iter_lint_no_lint_suppression/: Cargo.toml
lints/iter_lint_no_std_print/: Cargo.toml
lints/iter_lint_return_type_shape/: Cargo.toml
(+479 files in other folders)
