[workspace]
resolver = "3"
members = [
    "iter_core",
    "iter_tracing",
    "iter_language",
    "iter_cli",
    "iter_command_cli",
    "iter_cron_cli",
    "iter_files_cli",
    "iter_watch_cli",
    "iter_webhook_cli",
]
# `iter_language/fuzz` is a standalone cargo-fuzz package that requires the
# nightly toolchain and depends on `libfuzzer-sys`. `lints/` is the dylint
# custom-lint subworkspace and pins its own nightly toolchain (`rustc-dev`
# component). Excluding both keeps `cargo build --workspace` stable-toolchain-clean.
exclude = [
    "iter_language/fuzz",
    "lints",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/k-kinzal/iter"
authors = ["iter contributors"]

# Policy: `anyhow` is test-only in this workspace. If a crate's tests need it,
# add it to that crate's `[dev-dependencies]`, never `[dependencies]` or
# `[workspace.dependencies]`. Cargo's dev-dependency scope enforces this
# boundary; do not add a custom lint for it.
[workspace.dependencies]
# Internal crates
iter_core = { path = "iter_core", version = "0.1.0" }
iter_tracing = { path = "iter_tracing", version = "0.1.0" }
iter_language = { path = "iter_language", version = "0.1.0" }
iter_cron_cli = { path = "iter_cron_cli", version = "0.1.0" }
iter_watch_cli = { path = "iter_watch_cli", version = "0.1.0" }
iter_command_cli = { path = "iter_command_cli", version = "0.1.0" }
iter_files_cli = { path = "iter_files_cli", version = "0.1.0" }
iter_webhook_cli = { path = "iter_webhook_cli", version = "0.1.0" }

# Error handling
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
ulid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry-appender-tracing = { version = "0.31.1", features = ["experimental_metadata_attributes", "experimental_use_tracing_span_context"] }
opentelemetry-otlp = { version = "0.31", default-features = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
handlebars = "6"

# Parser (iter_language)
chumsky = "0.9"
ariadne = "0.4"

# Queue
redis = { version = "0.32", features = ["tokio-comp", "aio"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-sdk-sqs = { version = "1" }
aws-sdk-dynamodb = { version = "1" }
aws-sdk-s3 = { version = "1" }
aws-sigv4 = { version = "1" }
aws-types = { version = "1" }
aws-smithy-http-client = { version = "1", features = ["rustls-aws-lc"] }
aws-smithy-types = { version = "1" }
aws-smithy-runtime-api = { version = "1" }

# Trigger
notify = "6"
globset = "0.4"
cron = "0.12"
axum = "0.7"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
percent-encoding = "2"
regex = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tabwriter = "1"

# System (iter_instance)
nix = { version = "0.28", features = ["process", "signal", "fs"] }
libc = "0.2"

# Test
tempfile = "3"
insta = { version = "1", features = ["yaml"] }
pretty_assertions = "1"
pest = "2"
pest_derive = "2"
proptest = "1"
arbitrary = { version = "1", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0

# ---------------------------------------------------------------------------
# Workspace-wide lint policy.
#
# Member crates inherit these via `[lints] workspace = true`. Group lints carry
# `priority = -1` so individual central overrides below take precedence.
# ---------------------------------------------------------------------------
[workspace.lints.rust]
unsafe_code = "deny"
unreachable_pub = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
trivial_numeric_casts = "deny"
let_underscore_drop = "deny"
# Shared trigger/CLI modules intentionally keep some feature- and mode-specific helpers.
dead_code = "allow"
# Macro re-exports in trigger crates are only used by binary targets.
unused_imports = "allow"
# Some trigger crates export paired stdout/stderr macros but only use one side per target.
unused_macros = "allow"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
# Every unsafe block must carry a local justification, and those comments must
# stay attached to actual unsafe code.
undocumented_unsafe_blocks = "deny"
unnecessary_safety_comment = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
panic_in_result_fn = "deny"
wildcard_enum_match_arm = "deny"
match_wildcard_for_single_variants = "deny"
# Numeric narrowing is permitted at explicit protocol and display boundaries.
cast_possible_truncation = "allow"
# Unit matches keep some command/trigger control-flow branches visually uniform.
ignored_unit_patterns = "allow"
# Module names mirror domain nouns even when a type shares the same noun.
module_inception = "allow"
# Several APIs take owned values to match builder and async boundary ergonomics.
needless_pass_by_value = "allow"
# CLI and runtime assembly functions are clearer kept as single workflows.
too_many_arguments = "allow"
# Parser, CLI, and runtime workflows are sometimes clearer in one function.
too_many_lines = "allow"
# Existing formatting style intentionally supports pre-captured format values.
uninlined_format_args = "allow"
# Async trait implementations keep uniform signatures across sync/async drivers.
unused_async = "allow"

# ---------------------------------------------------------------------------
# Custom lint libraries (dylint).
#
# Run with: `cargo dylint --all --workspace`
# Install once: `cargo install cargo-dylint dylint-link`
#
# Each entry under `libraries` is a path glob to a dylint cdylib crate.
# New custom lints go under `lints/` and are picked up automatically.
# See `lints/Cargo.toml` for the lint subworkspace layout.
# ---------------------------------------------------------------------------
[workspace.metadata.dylint]
libraries = [
    { path = "lints/*" },
]
