[package]
name = "iter_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "iter CLI — composition root for the iter agent control framework"

[[bin]]
name = "iter"
path = "src/main.rs"

[dependencies]
iter_core.workspace = true
iter_tracing.workspace = true
iter_language.workspace = true
# Signal-source binaries the compose run spawns. Transient: a downward
# cli → trigger-CLI edge (cycle-free) that survives until the trigger
# subprocess spawner replaces in-process dispatch (plan Inc 5g).
iter_cron_cli.workspace = true
iter_watch_cli.workspace = true
iter_command_cli.workspace = true
iter_files_cli.workspace = true
iter_webhook_cli.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-util = { workspace = true }
clap.workspace = true
clap_complete.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
tabwriter.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono = { workspace = true }
async-trait.workspace = true
globset.workspace = true
percent-encoding.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
nix = { workspace = true }

[lints]
workspace = true
