[package]
name = "iter_command_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "iter-command — single-process command-poll trigger that publishes signals into an iter queue"

[lib]
name = "iter_command_cli"
path = "src/lib.rs"

[[bin]]
name = "iter-command"
path = "src/main.rs"

[dependencies]
iter_core.workspace = true
iter_tracing.workspace = true
iter_trigger.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
regex.workspace = true
serde = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
nix = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread", "process"] }

[lints]
workspace = true
