[package]
name = "iter_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core traits, domain types, and Runner for the iter agent control framework"

[features]
default = [
    "driver-sqs",
    "driver-redis",
]
driver-sqs = ["dep:aws-config", "dep:aws-credential-types", "dep:aws-sdk-sqs", "dep:aws-sdk-dynamodb", "dep:aws-sdk-s3", "dep:aws-sigv4", "dep:aws-types", "dep:aws-smithy-http-client", "dep:aws-smithy-types", "dep:aws-smithy-runtime-api"]
driver-redis = ["dep:redis"]

[dependencies]
iter_tracing.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-util = { workspace = true }
futures.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde = { workspace = true }
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
hex.workspace = true
sha2.workspace = true
tracing.workspace = true
handlebars.workspace = true

# workspace 実装向け
tempfile.workspace = true

# queue drivers (feature-gated)
redis = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }
aws-sdk-sqs = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-sigv4 = { workspace = true, optional = true }
aws-types = { workspace = true, optional = true }
aws-smithy-http-client = { workspace = true, optional = true }
aws-smithy-types = { workspace = true, optional = true }
aws-smithy-runtime-api = { workspace = true, optional = true }

# workspace + file queue driver
notify.workspace = true
globset.workspace = true

# queue address parsing (redis ?key= percent-decoding)
percent-encoding.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
insta = { workspace = true, features = ["yaml"] }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true

# NOTE: do not use `[lints] workspace = true` here — cargo forbids mixing
# workspace inheritance with per-package overrides. iter_core needs to
# `allow` `unsafe_code` (legitimate FFI in process/queue), so the rust
# and clippy lint groups are duplicated from the root `Cargo.toml`.
[lints.rust]
# iter_core owns the low-level process and queue FFI boundaries.
unsafe_code = "allow"
unreachable_pub = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
trivial_numeric_casts = "deny"
let_underscore_drop = "deny"
# Shared trigger/CLI modules intentionally keep some feature- and mode-specific helpers.
dead_code = "allow"
# Macro re-exports in trigger crates are only used by binary targets.
unused_imports = "allow"
# Some trigger crates export paired stdout/stderr macros but only use one side per target.
unused_macros = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
# Every unsafe block must carry a local justification, and those comments must
# stay attached to actual unsafe code.
undocumented_unsafe_blocks = "deny"
unnecessary_safety_comment = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
panic_in_result_fn = "deny"
unwrap_used = "deny"
wildcard_enum_match_arm = "deny"
match_wildcard_for_single_variants = "deny"
# Numeric narrowing is permitted at explicit protocol and display boundaries.
cast_possible_truncation = "allow"
# Unit matches keep some command/trigger control-flow branches visually uniform.
ignored_unit_patterns = "allow"
# Module names mirror domain nouns even when a type shares the same noun.
module_inception = "allow"
# Several APIs take owned values to match builder and async boundary ergonomics.
needless_pass_by_value = "allow"
# CLI and runtime assembly functions are clearer kept as single workflows.
too_many_arguments = "allow"
# Parser, CLI, and runtime workflows are sometimes clearer in one function.
too_many_lines = "allow"
# Existing formatting style intentionally supports pre-captured format values.
uninlined_format_args = "allow"
# Async trait implementations keep uniform signatures across sync/async drivers.
unused_async = "allow"
disallowed_methods = "deny"
