[package]
name = "iter_cron_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "iter-cron — single-process cron trigger that publishes signals into an iter queue"

[lib]
name = "iter_cron_cli"
path = "src/lib.rs"

[[bin]]
name = "iter-cron"
path = "src/main.rs"

[dependencies]
iter_core.workspace = true
iter_tracing.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
nix = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread", "process"] }

[lints]
workspace = true
