[package]
name = "iter_files_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "iter-files — single-process trigger that turns a list of paths (stdin or file) into iter signals"

[lib]
name = "iter_files_cli"
path = "src/lib.rs"

[[bin]]
name = "iter-files"
path = "src/main.rs"

[dependencies]
iter_core.workspace = true
iter_tracing.workspace = true
iter_trigger.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread", "process"] }

[lints]
workspace = true
