[package]
name = "iter_language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Parser, AST, and semantic analyzer for the iter workflow definition language"

[dependencies]
ariadne.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
pest.workspace = true
pest_derive.workspace = true
proptest.workspace = true
arbitrary.workspace = true

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true
