[package]
name = "iter_trigger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SDK for iter trigger CLIs — Queue connection and Signal emission"

[features]
default = ["driver-redis"]
driver-redis = ["iter_core/driver-redis"]

[dependencies]
iter_core = { path = "../iter_core", version = "0.1.0" }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
serde_json.workspace = true
percent-encoding.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

[lints]
workspace = true
