[package]
name = "iter_webhook_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "iter-webhook — single-process HTTP webhook trigger that publishes signals into an iter queue"

[lib]
name = "iter_webhook_cli"
path = "src/lib.rs"

[[bin]]
name = "iter-webhook"
path = "src/main.rs"

[dependencies]
iter_core.workspace = true
iter_tracing.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
axum.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread", "process"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
